# workshop-astro-blitz

./: .clang-format  .gitignore  .markdownlint-cli2.yaml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  SESSION_HANDOFF.md  STATUS.md  Taskfile.yml  opencode.jsonc
.opencode/agents/: build-and-test.md  changelog-drafter.md  lint-check.md
design/: DESIGN.md
docs/: REFERENCE.md
scripts/: clang-format-all.ps1
src/: audio.c  audio.h  bullet.c  bullet.h  enemy.c  enemy.h  game.c  game.h  lightmap.c  lightmap.h  main.c  particle.c  particle.h  player.c  player.h  postfx.c  postfx.h  screenshake.c  screenshake.h  settings.c  settings.h  sprites.c  sprites.h  tilemap.c  tilemap.h  upgrade.c  upgrade.h  vec2.c  vec2.h  weapon.c  weapon.h
tests/: raylib_stubs.c  raylib_stubs.h  test_audio.c  test_bullet.c  test_enemy.c  test_game.c  test_integration.c  test_particle.c  test_player.c  test_sample.c  test_screenshake.c  test_settings.c  test_sprites.c  test_tilemap.c  test_upgrade.c  test_vec2.c  test_weapon.c
